# yocto-sbom

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  RELEASE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: github-actions.yml  gitlab-ci.yml  minimal.conf  yocto-sbom.conf
tests/: test_generators.py  test_license.py  test_parsers.py
tests/fixtures/: sample.bb  sample_bblayers.conf  sample_gitmodules
yocto_sbom/: __init__.py  __main__.py  cli.py  config.py  validate.py
yocto_sbom/generators/: common.py  cyclonedx.py  spdx.py
yocto_sbom/parsers/: bblayers.py  bitbake.py  dependencies.py  gitmodules.py
